Fix scrollbar on the sidelist

--- a/src/styles/SideListStyles.css
+++ b/src/styles/SideListStyles.css
@@ -3,6 +3,10 @@
     cursor: pointer;
 }
 
+.scrollbar {
+    overflow-y: hidden;
+}
+
 .scrollbar:hover {
     overflow-y: scroll;
 }
